[package]
name = "serverless"
version = "0.1.0"
edition = "2021"

[dependencies]
# v8 wrapper
deno_core = "0.149.0"
# serialisation
serde = { version = "1.0", features = ["derive"] }
# multithreaded runtime
tokio = { version = "1.21", features = ["full"] }
# sqlite
rusqlite = { version = "0.28", features = ["bundled"] }
# http server
axum = "0.6.0-rc.1"
# tracing
tracing = "0.1.36"
# traces to stdout
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "local-time", "time"] }
# log time formatting
time = { version = "0.3.14", features = ["formatting"] }
